--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cms-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://dash.bestwebneed.ir/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
